# podivne

./: README.md  git_config.sh  noxfile.py  pyproject.toml
features/: environment.py  init.feature
features/steps/: executable_steps.py
ppp/: __main__.py  _version.py
ppp/core/: app.py  design_patterns.py  logger.py
